Implement the classroom waiting list apis
